--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -60,3 +60,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="create-time/create-time.html"><link rel="import" href="create-timeslots/create-timeslots.html">
 <link rel="import" href="times-list/times-list.html">
 <link rel="import" href="appointment-list-user/appointment-list-user.html">
+<link rel="import" href="create-rooms/create-rooms.html">
+<link rel="import" href="rooms-list/rooms-list.html">
