--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -58,6 +58,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'a-manage-profil';
     });
 
+    page('/amanager', function () {
+      app.route = 'a-manage-rooms';
+    });
+
+    page('/acreater', function () {
+      app.route = 'a-create-rooms';
+    });
+
 
     // User Pages
 
