--- a/app/admin.html
+++ b/app/admin.html
@@ -10,6 +10,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <html lang="">
+
 <head>
   <meta charset="utf-8">
   <meta name="description" content="">
@@ -82,7 +83,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <span>Dozenten Übersicht</span>
           </a>
 
-
           <a data-route="a-add-docent" href="/aaddd">
             <iron-icon icon="mail"></iron-icon>
             <span>Dozenten erstellen</span>
@@ -92,7 +92,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <iron-icon icon="mail"></iron-icon>
             <span>Dozenten verwalten</span>
           </a>
-        </hr>
+          </hr>
+          <a data-route="a-create-room" href="/acreater">
+            <iron-icon icon="mail"></iron-icon>
+            <span>Create rooms</span>
+          </a>
+          <a data-route="a-manage-room" href="/amanager">
+            <iron-icon icon="mail"></iron-icon>
+            <span>Manage rooms</span>
+          </a>
+          </hr>
           <a data-route="a-overview-appointments" href="/aoverviewa">
             <iron-icon icon="mail"></iron-icon>
             <span>Sprechzeiten Übersicht</span>
@@ -100,19 +109,22 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           <a data-route="a-manage-appointments" href="/amanagea">
             <iron-icon icon="mail"></iron-icon>
-            <span>Sprechzeiten verwalten<span>
+            <span>Sprechzeiten verwalten
+              <span>
           </a>
 
-</hr>
-        </hr>
-        <a data-route="a-manage-profil" href="/amanagep">
-          <iron-icon icon="mail"></iron-icon>
-          <span>Profil verwalten<span>
-        </a>
-        <a data-route="a-logout"  onClick="javascript:Parse.User.logOut();">
-          <iron-icon icon="exit-to-app"></iron-icon>
-          <span>Logout<span>
-        </a>
+          </hr>
+          </hr>
+          <a data-route="a-manage-profil" href="/amanagep">
+            <iron-icon icon="mail"></iron-icon>
+            <span>Profil verwalten
+              <span>
+          </a>
+          <a data-route="a-logout" onClick="javascript:Parse.User.logOut();">
+            <iron-icon icon="exit-to-app"></iron-icon>
+            <span>Logout
+              <span>
+          </a>
 
         </paper-menu>
       </paper-scroll-header-panel>
@@ -127,7 +139,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           <!-- Toolbar icons -->
           <paper-icon-button icon="refresh" onclick="javascript:location.reload();"></paper-icon-button>
-          <paper-icon-button icon="exit-to-app" onClick="javascript:Parse.User.logOut(); document.location.href = '/';" ></paper-icon-button>
+          <paper-icon-button icon="exit-to-app" onClick="javascript:Parse.User.logOut(); document.location.href = '/';"></paper-icon-button>
 
           <!-- Application name -->
           <div class="middle middle-container center horizontal layout">
@@ -147,50 +159,40 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             <section data-route="a-home">
               <paper-material elevation="1">
-                <my-greeting></my-greetings>
-                  
-
-              </paper-material>
-          <div class="teacherRole">
-              <paper-material elevation="1">
-                <signup-element></signup-element>
+                <
               </paper-material>
 
-              <paper-material elevation="1" class="paper-font-body2">
-                <h1 id="license">License</h1>
-                <p>Everything in this repo is BSD style license unless otherwise specified.</p>
-                <p>Copyright (c) 2015 The Polymer Authors. All rights reserved.</p>
-                <p>Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:</p>
-                <ul>
-                <li>Redistributions of source code must retain the above copyright
-                notice, this list of conditions and the following disclaimer.</li>
-                <li>Redistributions in binary form must reproduce the above
-                copyright notice, this list of conditions and the following disclaimer
-                in the documentation and/or other materials provided with the
-                distribution.</li>
-                <li>Neither the name of Google Inc. nor the names of its
-                contributors may be used to endorse or promote products derived from
-                this software without specific prior written permission.</li>
-                </ul>
-                <p>THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS &quot;AS IS&quot; AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
-              </paper-material>
-            </div>
             </section>
 
             <section data-route="a-overview-docent">
               <paper-material elevation="1">
-                <h2 class="paper-font-display2">Registrierte Benutzer</h2>
+                <h2 class="paper-font-display2">Docent List</h2>
                 <docent-list></docent-list>
               </paper-material>
             </section>
 
+            <section data-route="a-create-rooms">
+            
+
+                <create-rooms></create-rooms>
+
+            </section>
+
+            <section data-route="a-manage-rooms">
+
+
+                <rooms-list></rooms-list>
+
+            </section>
+
+
             <section data-route="a-add-docent">
-            <create-docent></create-docent>
+              <create-docent></create-docent>
             </section>
 
             <section data-route="a-manage-appointments">
 
-                <create-time></create-time>
+              <create-time></create-time>
 
             </section>
 
@@ -223,7 +225,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <!-- build:js scripts/app.js -->
   <script src="scripts/app.js"></script>
-          <script src="scripts/hour.js"></script>
+  <script src="scripts/hour.js"></script>
   <!-- endbuild-->
 </body>
 
